src/test/error/nilable1.lns
{
    let val:int = nil;
}
{
    let val:int = 0;
    val = nil;
}
{
    let val:int! = 0;
    val = val + 1;
}
